2006-12-13	Richard van den Berg  <richard@vdberg.org>
	* Work around for error while reading gzipped aide.db files

2006-12-08	Richard van den Berg  <richard@vdberg.org>
	* Removed ustat dead code

2006-12-07	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.13
	* Changed version to post-0.13

2006-11-30	Richard van den Berg  <richard@vdberg.org>
	* Set meaningful exitcodes when --check is used (Pablo Virolainen)

2006-11-29	Richard van den Berg  <richard@vdberg.org>
	* Changed version to post-0.13-rc2
	* Check for WHIRLPOOL so old mhash can be used (Pablo Virolainen)

2006-11-25	Richard van den Berg  <richard@vdberg.org>
	* Fix error message about HAVAL and CRC32 with --update and gcrypt
	* Fix --with and --without logic of configure
	* Make --without switches of configure work
	* Released version 0.13-rc2

2006-11-24	Richard van den Berg  <richard@vdberg.org>
	* Remove stpcpy declaration because it is not defined in util.c
	* Fix segfault when line->cntx is NULL
	* Add --without-mhash to configure
	* Don't use DB_SELINUX and DB_XATTR when not present
	* Fix use of libgcrypt
	* Add new group 'l' to detect changed link name
	* Update documentation with new groups
	* Supply strnlen in utils.c
	* Released version 0.13-rc1

2006-11-15	Richard van den Berg  <richard@vdberg.org>
	* Fix syslog URLs (Yves Mettier <ymettier@libertysurf.fr>)

2006-10-30	Richard van den Berg  <richard@vdberg.org>
	* Make --with-selinux work without pkg-config

2006-10-27	Richard van den Berg  <richard@vdberg.org>
	* Added "Add xattr support" patch from James Antill <james-aide-38mkm@and.org>
	* Added "report miscompares to Linux Audit System" patch from James Antill
	* Added "Allow building without mhash library" patch from James Antill
	* Added "correct db_names" patch from Steve Grubb <sgrubb@redhat.com>
	* Added "memory leaks and performance updates" patch from Steve Grubb
	* Added "deadcode removal" patch from Steve Grubb <sgrubb@redhat.com>