@@ -1,4 +1,7 @@
 2006-12-13	Richard van den Berg  <richard@vdberg.org>
+	* Use lseek() instead of fseek() on aide.db
+
+2006-12-13	Richard van den Berg  <richard@vdberg.org>
 	* Work around for error while reading gzipped aide.db files
 
 2006-12-08	Richard van den Berg  <richard@vdberg.org>
